--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
     "description": "PHP Container Trait Collection",
     "type": "metapackage",
     "require": {
-        "php": "^8.3"
+        "php": "^8.3",
+        "potter/container-trait": "dev-main"
     },
     "license": "MIT",
     "authors": [
