--- a/composer.json
+++ b/composer.json
@@ -4,8 +4,8 @@
     "type": "metapackage",
     "require": {
         "php": "^8.3",
-        "potter/container-trait": "dev-main",
-        "potter/container-aware-trait": "dev-main"
+        "potter/container-trait": "v0.0.1-alpha@alpha",
+        "potter/container-aware-trait": "v0.0.1-alpha@alpha"
     },
     "suggest": {
         "potter/container": "dev-main",
@@ -19,5 +19,5 @@
             "email": "j@ypotter.ca"
         }
     ],
-    "minimum-stability": "dev"
+    "minimum-stability": "alpha"
 }
